added innerHTMl to get and print values to the dom

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <input type="text" id="input">
-<script type="text/javascript" src="main.js"></script>
+
 <button type="sumbit" onClick="getWeatherData()">submit</button>
+<div id="card"></div>
+<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="doStuff.js"></script>
 </body>
 </html>
