added styling and interface stuff

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
 	<title></title>
 </head>
 <body>
+<div class="zip">
+<h2>Enter your Zip Code</h2>
 <input type="text" id="input">
-
 <button type="sumbit" onClick="getWeatherData()">submit</button>
-<div id="card"></div>
+</div>
+<div class="wrapper">
+<div id="cardContainer"></div>
+</div>
+
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="doStuff.js"></script>
 </body>
